--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ buildscript {
 		mavenCentral()
 	}
 	dependencies {
-		classpath 'org.springframework.boot:spring-boot-gradle-plugin:1.5.20.RELEASE'
+		classpath 'org.springframework.boot:spring-boot-gradle-plugin:1.5.21.RELEASE'
 	}
 }
 
@@ -13,7 +13,7 @@ plugins {
 
 apply plugin: 'org.springframework.boot'
 
-group = 'org.launchcode'
+group = 'com.brokeshirts'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '1.8'
 
@@ -24,7 +24,6 @@ repositories {
 dependencies {
 	compile 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	compile 'org.springframework.boot:spring-boot-starter-web'
-	compile group: 'javax.persistence', name: 'javax.persistence-api', version: '2.2'
 	runtime 'org.springframework.boot:spring-boot-devtools'
 	testCompile 'org.springframework.boot:spring-boot-starter-test'
 }
