--- a/build.gradle
+++ b/build.gradle
@@ -1,33 +1,37 @@
 buildscript {
-	repositories {
-		mavenCentral()
-	}
-	dependencies {
-		classpath 'org.springframework.boot:spring-boot-gradle-plugin:1.5.21.RELEASE'
-	}
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath 'org.springframework.boot:spring-boot-gradle-plugin:1.5.20.RELEASE'
+    }
 }
 
 plugins {
-	id 'java'
+    id 'java'
 }
 
 apply plugin: 'org.springframework.boot'
 
-group = 'com.brokeshirts'
+group = 'org.launchcode'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '1.8'
 
 repositories {
-	mavenCentral()
+    mavenCentral()
 }
 
 dependencies {
-	compile 'org.springframework.boot:spring-boot-starter-thymeleaf'
-	compile 'org.springframework.boot:spring-boot-starter-web'
-	runtime 'org.springframework.boot:spring-boot-devtools'
-	testCompile 'org.springframework.boot:spring-boot-starter-test'
+    compile 'org.springframework.boot:spring-boot-starter-thymeleaf'
+    compile 'org.springframework.boot:spring-boot-starter-web'
+    compile 'org.springframework.boot:spring-boot-starter-data-jpa'
+    compile 'mysql:mysql-connector-java'
+    compile 'org.springframework.boot:spring-boot-devtools'
+    compile group: 'javax.persistence', name: 'javax.persistence-api', version: '2.2'
+    runtime 'org.springframework.boot:spring-boot-devtools'
+    testCompile 'org.springframework.boot:spring-boot-starter-test'
 }
 
 bootRun {
-	addResources = true
+    addResources = true
 }
