--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+spring.jpa.hibernate.dll-auto=create
+spring.datasource.url=jdbc:mysql://localhost:3306/ecom
+spring.datasource.username=ecom
+spring.datasource.password=password
