--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-spring.jpa.hibernate.dll-auto=create
-spring.datasource.url=jdbc:mysql://localhost:3306/ecom
+spring.jpa.hibernate.dll-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/ecom?autoReconnect=true&useSSL=false
 spring.datasource.username=ecom
 spring.datasource.password=password
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
