--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
-spring.jpa.hibernate.dll-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/ecom?autoReconnect=true&useSSL=false
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.driverClassName=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/ecom?useSSL=false
 spring.datasource.username=ecom
 spring.datasource.password=password
-spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
