--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ plugins {
 
 apply plugin: 'org.springframework.boot'
 
-group = 'org.launchcode'
+group = 'com.brokeshirts'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '1.8'
 
