--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,6 @@ spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/ecom?useSSL=false
 spring.datasource.username=ecom
 spring.datasource.password=password
+
+spring.http.multipart.max-file-size=128MB
+spring.http.multipart.max-request-size=128MB
