--- a/build.gradle
+++ b/build.gradle
@@ -25,8 +25,8 @@ dependencies {
     compile 'org.springframework.boot:spring-boot-starter-thymeleaf'
     compile 'org.springframework.boot:spring-boot-starter-web'
     compile 'org.springframework.boot:spring-boot-starter-data-jpa'
-    compile 'org.springframework.security.oauth:spring-security-oauth2'
-    compile 'org.springframework.boot:spring-boot-starter-security'
+//    compile 'org.springframework.security.oauth:spring-security-oauth2'
+//    compile 'org.springframework.boot:spring-boot-starter-security'
     compile 'mysql:mysql-connector-java'
     compile 'org.springframework.boot:spring-boot-devtools'
     compile group: 'javax.persistence', name: 'javax.persistence-api', version: '2.2'
