Migrated Spring Boot from 1.5.7 to 2.0.1 and Gradle from 3 to 4

--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,20 @@
 buildscript {
     repositories {
+        jcenter()
         mavenCentral()
     }
     dependencies {
-        classpath 'org.springframework.boot:spring-boot-gradle-plugin:1.5.20.RELEASE'
+        classpath 'org.springframework.boot:spring-boot-gradle-plugin:2.0.5.RELEASE'
     }
 }
 
 plugins {
-    id 'java'
+    id 'org.springframework.boot' version '2.0.5.RELEASE'
 }
 
-apply plugin: 'org.springframework.boot'
+apply plugin: 'java'
+apply plugin: 'maven'
+apply plugin: 'io.spring.dependency-management'
 
 group = 'com.brokeshirts'
 version = '0.0.1-SNAPSHOT'
@@ -25,8 +28,6 @@ dependencies {
     compile 'org.springframework.boot:spring-boot-starter-thymeleaf'
     compile 'org.springframework.boot:spring-boot-starter-web'
     compile 'org.springframework.boot:spring-boot-starter-data-jpa'
-//    compile 'org.springframework.security.oauth:spring-security-oauth2'
-//    compile 'org.springframework.boot:spring-boot-starter-security'
     compile 'mysql:mysql-connector-java'
     compile 'org.springframework.boot:spring-boot-devtools'
     compile group: 'javax.persistence', name: 'javax.persistence-api', version: '2.2'
@@ -35,5 +36,5 @@ dependencies {
 }
 
 bootRun {
-    addResources = true
+    sourceResources sourceSets.main
 }
