--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,26 @@ spring.data.jdbc.repositories.enabled=true
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=128MB
 spring.servlet.multipart.max-request-size=128MB
+
+security.oauth2.client.client-id=brokeEcom
+security.oauth2.client.client-secret=kdfij409jreekmfk4
+security.oauth2.client.scope=read, write
+security.oauth2.client.auto-approve-scopes='.*'
+
+facebook.client.clientId=400539260790310
+facebook.client.clientSecret=4e45eddfd9190f79e60def06d83aa38e
+facebook.client.accessTokenUri=https://graph.facebook.com/oauth/access_token
+facebook.client.userAuthorizationUri=https://www.facebook.com/dialog/oauth
+facebook.client.tokenName=oauth_token
+facebook.client.authenticationScheme=query
+facebook.client.clientAuthenticationScheme=form
+facebook.resource.userInfoUri=https://graph.facebook.com/me
+
+github.client.clientId=b553b04d00b135ce0b5c
+github.client.clientSecret=756f0c48afcea145a4c1d1cae771ba40494ef7dc
+github.client.accessTokenUri=https://github.com/login/oauth/access_token
+github.client.userAuthorizationUri=https://github.com/login/oauth/authorize
+github.client.clientAuthenticationScheme=form
+github.resource.userInfoUri=https://api.github.com/user
+
+spring.main.allow-bean-definition-overriding=true
