featured products now show price range and image of product. Products can only be featured if in stock.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,6 +23,7 @@ facebook.client.userAuthorizationUri=https://www.facebook.com/dialog/oauth
 facebook.client.tokenName=oauth_token
 facebook.client.authenticationScheme=query
 facebook.client.clientAuthenticationScheme=form
+facebook.client.scope=email
 facebook.resource.userInfoUri=https://graph.facebook.com/me
 
 github.client.clientId=b553b04d00b135ce0b5c
