working on login.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,3 +34,8 @@ github.client.clientAuthenticationScheme=form
 github.resource.userInfoUri=https://api.github.com/user
 
 spring.main.allow-bean-definition-overriding=true
+
+spring.jpa.show-sql=true
+spring.mvc.view.prefix: /
+spring.mvc.view.suffix: .jsp
+spring.message.basename=validation
